--- a/src/components/layout/Login/Login.css
+++ b/src/components/layout/Login/Login.css
@@ -57,9 +57,9 @@
   flex-direction: column;
 }
 
-.items-center {
+/* .items-center {
   align-items: center;
-}
+} */
 
 .gap-7 {
   gap: 1.75rem; 
